feat: sicilian API Reference 및 CLI 사용법 페이지 추가, 다국어 지원 개선

--- a/src/shared/i18n/messages/ko/sicilian.json
+++ b/src/shared/i18n/messages/ko/sicilian.json
@@ -11,6 +11,34 @@
       "4": "CLI를 통해 코드 스니펫을 간편하게 생성하는 기능이 추가되었습니다. 자세한 내용은 <a><cd>CLI 사용법</cd></a> 페이지를 참조하세요."
     },
     "installation": "설치 방법",
-    "installationBody": "sicilian은 아래의 다양한 방법으로 설치할 수 있습니다."
+    "installationBody": "sicilian은 아래의 다양한 방법으로 설치할 수 있습니다.",
+    "quickStart": "빠른 시작",
+    "quickStartBody": "아래 예시는 sicilian의 기본적인 사용법을 보여줍니다. 이 예시에서는 간단한 로그인 폼을 구현하고 있으며, 이메일과 비밀번호 필드에 대한 유효성 검사를 포함하고 있습니다. sicilian의 폼 컨트롤러를 사용하여 폼 상태를 관리하고, 각 입력 필드에 대한 오류 메시지를 표시하는 방법을 확인할 수 있습니다."
+  },
+  "api": {
+    "0": "이 페이지는 Sicilian 라이브러리의 주요 API에 대한 상세한 정보를 제공합니다. 각 함수, 컴포넌트, 훅의 매개변수, 반환 값, 타입 및 사용 예시를 확인할 수 있습니다."
+  },
+  "cli": {
+    "title": "Sicilian CLI 사용법",
+    "description": "<cd>@ilokesto/sicilian</cd>은 개발자의 생산성을 높이고 반복적인 코드 작성을 줄이기 위한 CLI(Command Line Interface) 도구를 제공합니다. CLI를 통해 빠르고 효율적으로 <cd>sicilian</cd> 코드 스니펫을 간편하게 생성하고 프로젝트에 추가할 수 있습니다.",
+    "subtitle1": "help 명령어",
+    "0": "<cd>help</cd> 명령어는 Sicilian CLI의 사용법과 사용 가능한 플래그 및 옵션에 대한 정보를 표시합니다.",
+    "1": "또는 인자 없이 <cd>sicilian</cd> 명령어 만을 단독으로 실행할 때도 도움말이 표시됩니다.",
+    "subtitle2": "generate 명령어",
+    "2": "<cd>generate</cd> 명령어는 새로운 코드 스니펫을 생성하여 지정된 파일에 추가합니다.",
+    "subtitle3": "1. 기본 스니펫 생성 (비구조화 할당)",
+    "3": "다음 명령어를 사용하여 <cd>src/components/MyForm.tsx</cd> 에 비구조화 할당 형태의 스니펫을 생성합니다.",
+    "4": "명령어 실행의 결과로 <cd>src/components/MyForm.tsx</cd> 에 다음과 같은 코드가 추가됩니다:",
+    "subtitle4": "2. 객체 스니펫 생성",
+    "5": "다음 명령어를 사용하여 <cd>src/utils/formHooks.ts</cd> 에 객체 형태의 스니펫을 생성합니다.",
+    "6": "명령어 실행의 결과로 <cd>src/utils/formHooks.ts</cd> 에 다음과 같은 코드가 추가됩니다:",
+    "list": {
+      "0": "<cd>'<'file_path'>'</cd>: 스니펫을 생성할 파일의 경로를 지정합니다. 파일이 존재하지 않으면 새로 생성되고, 이미 존재하면 스니펫이 파일 끝에 추가됩니다. 필요한 경우 상위 디렉토리도 자동으로 생성됩니다.",
+      "1": "<cd>-o, --object</cd>: 객체 형태의 스니펫을 생성합니다. 이 옵션을 사용하지 않으면 기본적으로 비구조화 할당 형태의 스니펫이 생성됩니다."
+    }
+  },
+  "tutorials": {
+    "title": "튜토리얼: 세 가지 폼 패턴 이해하기",
+    "description": "프론트엔드에서 form은 유저의 입력을 받아 처리하는 가장 기본적인 수단입니다. 그러나 단순히 입력값을 받는 것만으로는 충분하지 않습니다. 어떤 입력을 받아야 하는지, 입력값이 언제 어떻게 변할 수 있는지를 고민하는 것은 form 설계에서 매우 중요한 일입니다. 그렇기 때문에 form의 구조와 동작 방식을 체계적으로 분류할 필요가 있습니다.<br></br><br></br>sicilian은 이러한 문제의식에서 출발하여, 프론트엔드에서 작성되는 form을 세 가지 형태로 구분합니다. 각각은 <b>static form</b>, <b>dynamic form</b>, 그리고 <b>dynamic input</b>으로, form 자체가 정적인지 혹은 동적인지, 그리고 form을 구성하는 input이 정적인지 동적인지에 따라 구분됩니다. 아래 표는 이 세 가지 형태의 분류 기준을 요약한 것입니다."
   }
 }
